2010-05-04  Steven Lai  <steven_lai@asia.apple.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=37900
        <rdar://problem/7806164> cloneNode() does not preserve z-index with more than six digits

        * fast/dom/HTMLInputElement/clone-input-checked-expected.txt: Added.
        * fast/dom/HTMLInputElement/clone-input-checked.html: Added.
        * fast/dom/clone-node-z-index-expected.txt: Added.
        * fast/dom/clone-node-z-index.html: Added.
2010-05-04  Steven Lai  <steven_lai@asia.apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=37900
        <rdar://problem/7806164> cloneNode() does not preserve z-index with more than six digits

        Tests: fast/dom/HTMLInputElement/clone-input-checked.html
               fast/dom/clone-node-z-index.html

        * dom/Element.cpp: undid the order change of calling copyNonAttributeProperties() before setAttributes()
        (WebCore::Element::cloneElementWithoutChildren): uncheck the previous radio button in the same radio button group only when the checked radio box is appended to the dom tree
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::updateCheckedRadioButtons):
        (WebCore::HTMLInputElement::attach):
        (WebCore::HTMLInputElement::setChecked):
        * html/HTMLInputElement.h:

Canonical link: https://commits.webkit.org/50021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58766 268f45cc-cd09-0410-ab3c-d52691b4dbfc