WebCore/html/HTMLInputElement.cpp
@@ -165,6 +165,15 @@ static inline CheckedRadioButtons& checkedRadioButtons(const HTMLInputElement* e
     return element->document()->checkedRadioButtons();
 }
 
+void HTMLInputElement::updateCheckedRadioButtons()
+{
+    if (attached() && checked())
+        checkedRadioButtons(this).addButton(this);
+   
+    if (renderer() && renderer()->style()->hasAppearance())
+        renderer()->theme()->stateChanged(renderer(), CheckedState);
+}
+
 bool HTMLInputElement::valueMissing() const
 {
     if (!isRequiredFormControl() || readOnly() || disabled())
@@ -1227,6 +1236,9 @@ void HTMLInputElement::attach()
         }
     }
 
+    if (inputType() == RADIO)
+        updateCheckedRadioButtons();
+
     if (document()->focusedNode() == this)
         document()->updateFocusAppearanceSoon(true /* restore selection */);
 }
@@ -1415,10 +1427,7 @@ void HTMLInputElement::setChecked(bool nowChecked, bool sendChangeEvent)
     m_checked = nowChecked;
     setNeedsStyleRecalc();
 
-    checkedRadioButtons(this).addButton(this);
-
-    if (renderer() && renderer()->style()->hasAppearance())
-        renderer()->theme()->stateChanged(renderer(), CheckedState);
+    updateCheckedRadioButtons();
 
     // Ideally we'd do this from the render tree (matching
     // RenderTextView), but it's not possible to do it at the moment
